--- a/software/lis-vision-flight-ros/CMakeLists.txt
+++ b/software/lis-vision-flight-ros/CMakeLists.txt
@@ -7,6 +7,7 @@ find_package(catkin REQUIRED COMPONENTS
   rospy
   sensor_msgs
   std_msgs
+  mavros_extras
 )
 
 ###################################
